[package]
name = "codex-gateway"
version = "0.2.0"
edition = "2024"

[lib]
path = "rust-src/lib.rs"

[[bin]]
name = "codex-gateway"
path = "rust-src/main.rs"

[[bin]]
name = "codex-gateway-cli"
path = "rust-src/cli.rs"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
